# ai-research-assistant

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/api/: chat.py  documents.py  search.py
app/core/: document_store.py
app/services/: chat_history.py  embedding_service.py  llm_service.py  pdf_service.py  rag_service.py  search_service.py  text_service.py  vector_store.py
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: api.js
